feat: implement US-0012 for frontend
